--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<h1>The American Imperial Faction</h1>
 						<nav class="inner-nav">
 							<a href="#about"><p>About</p></a>
+							<a href="#review"><p>Unbiased Review</p></a>
 							<a href="#policies"><p>Main Policies</p></a>
 							<a href="#differences"><p>Differences</p></a>
 							<a href="#candidate"><p>Our Candidate</p></a>
@@ -65,6 +66,17 @@
 						alt="Darth Vader reaches out to help Luke Skywalker"
 						src="./images/i-am-your-father.jpg"
 					/>
+					<h2 id="review">Un-biased Review from Independent Video-Maker</h2>
+					<div class="indent">
+						<iframe
+							width="560"
+							height="315"
+							src="https://www.youtube.com/embed/uJq3gEIfoMI"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+						></iframe>
+					</div>
 					<h2 id="policies">Main Policies</h2>
 					<p>
 						We model our policies after those that proved to be successful in
